--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1>Aluno: Wryell Kenneth machado.</h1>
+    <h1>Alunos: Wryell Kenneth Machado; Daniel Gomes</h1>
 
 </body>
 </html>
